@@ -47,6 +47,8 @@ debian-installer (20040505) UNRELEASED; urgency=low
   * Steve Langasek
     - Change netboot target for alpha now that netabootwrap is in the
       archive, and add an appropriate versioned build-dep.
+  * Vincent Sanders
+    - Add fsck to check ext2 initrd.
 
  -- Joey Hess <joeyh@debian.org>  Tue,  4 May 2004 16:56:04 -0400
 
